src/objects/LG_DebtCredit_Check__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>LG_CurrentBillExposurePeriod__c</fullName>
        <label>Current Bill ExposurePeriod</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_Customer_Balance_Validity__c</fullName>
        <label>Customer Balance Validity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_Exposure_Period__c</fullName>
        <label>Exposure Period</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_Payable_Debt_Tolerance__c</fullName>
        <label>Payable Debt Tolerance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_Principal_Current_Address_Validity__c</fullName>
        <label>Principal Current Address Validity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_Validate_Prospect_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validate Prospect Flag</label>
        <type>Checkbox</type>
    </fields>
    <label>Debt/Credit Check</label>
</CustomObject>